--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "parse and transform word in text, use custom renderers for words",
   "main": "lib/index.js",
+  "browser": "lib/index.min.js",
   "repository": "https://github.com/zcorky/words-parser",
   "homepage": "https://github.com/zcorky/words-parser",
   "bugs": {
@@ -17,7 +18,9 @@
   "author": "Zero <uniquecolesmith@gmail.com> (https://moeover.com)",
   "license": "MIT",
   "scripts": {
-    "build": "npm run clean && tsc",
+    "build": "npm run build:typescript && npm run build:rollup",
+    "build:typescript": "npm run clean && tsc",
+    "build:rollup": "rollup -c",
     "clean": "rimraf -rf lib",
     "test": "jest -w 1",
     "coverage": "jest -w 1 && codecov",
@@ -31,6 +34,9 @@
     "husky": "^1.2.1",
     "jest": "^24.5.0",
     "rimraf": "^2.6.2",
+    "rollup": "^1.20.2",
+    "rollup-plugin-terser": "^5.1.1",
+    "rollup-plugin-typescript2": "^0.23.0",
     "ts-jest": "^24.0.0",
     "ts-node": "^7.0.1",
     "tslint": "^5.10.0",
