--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@types/jest": "^24.0.11",
     "@types/node": "^10.9.4",
+    "@zodash/camel-case": "^0.0.7",
     "codecov": "^3.2.0",
     "cross-env": "^5.2.0",
     "husky": "^1.2.1",
